--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "swiper": "^11.1.14"
   }
 }
