--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lucide-react": "^0.454.0",
     "next": "14.2.15",
+    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
     "reset-css": "^5.0.2",
