--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "reset-css": "^5.0.2",
+    "sass": "^1.80.6",
     "swiper": "^11.1.14"
   }
 }
