--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project_danda",
   "version": "0.1.0",
+  "homepage": "https://Dedn1s.github.io/kis_project_DANDA",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,5 +18,9 @@
     "reset-css": "^5.0.2",
     "sass": "^1.80.6",
     "swiper": "^11.1.14"
+  },
+  "devDependencies": {
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.0.3"
   }
 }
