--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "reset-css": "^5.0.2",
     "sass": "^1.80.6",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "vue-i18n": "^9.14.1"
   }
 }
