--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-cookie": "^7.2.2",
     "react-dom": "^18",
+    "react-use-cookie": "^1.6.1",
     "reset-css": "^5.0.2",
     "sass": "^1.80.7",
     "swiper": "^11.1.14"
