--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "accept-language": "^3.0.20",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.15",
     "next-i18next": "^15.3.1",
     "react": "^18",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "reset-css": "^5.0.2",
     "sass": "^1.80.7",
