--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
     "accept-language": "^3.0.20",
+    "i18next": "^24.1.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.454.0",
