--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.15",
-    "next-i18next": "^15.4.1",
+    "next": "^14.2.15",
+    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-cookie": "^7.2.2",
     "react-dom": "^18",
