--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
     "accept-language": "^3.0.20",
-    "i18next": "^24.1.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.454.0",
-    "next": "^14.2.15",
+    "next": "14.2.15",
     "next-i18next": "^15.3.1",
     "react": "^18",
     "react-cookie": "^7.2.2",
@@ -24,8 +23,7 @@
     "react-use-cookie": "^1.6.1",
     "reset-css": "^5.0.2",
     "sass": "^1.80.7",
-    "swiper": "^11.1.14",
-    "use-global-hook": "^0.3.0"
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "eslint": "8.57.1",
